add doge, grpc, hyper, path, time, version and which test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,20 @@ edition = "2021"
 [workspace]
 members = [
     "curve",
+    "doge",
     "gitext",
+    "grpc-test",
     "hex",
+    "hyper-test",
     "logic",
     "nativedb-test",
+    "path-test",
     "sled-test",
     "strop",
+    "time",
     "vdf",
+    "version",
+    "which-test",
 ]
 
 [dependencies]
